Actions
Bug #11579
closede1000g: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/io/e1000g/e1000g_main.c:6207:18: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] intr_handler = (ddi_intr_handler_t *)e1000g_intr; ^ ../../common/io/e1000g/e1000g_main.c:6209:18: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] intr_handler = (ddi_intr_handler_t *)e1000g_intr_pciexpress; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b6242eb47febde0b1450b13b626fae868830a828
commit b6242eb47febde0b1450b13b626fae868830a828 Author: Toomas Soome <tsoome@me.com> Date: 2019-09-27T15:59:14.000Z 11579 e1000g: cast between incompatible function types Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions