11579 e1000g: cast between incompatible function types Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Aurélien Larcher  <aurelien.larcher@gmail.com> Approved by: Robert Mustacchi <rm@fingolfin.org>